feature/add-style-home-page: add style on home page, implement media query

--- a/App/Admin/Resources/Views/block__admin_header.phtml
+++ b/App/Admin/Resources/Views/block__admin_header.phtml
@@ -1,4 +1,4 @@
-<header class="admin-header">
+<header class="admin__header">
     <?php
     if (!empty($this->vars['options']['flash-message'])) { ?>
         <div class="flash-message <?= $this->vars['options']['flash-message']['type-class'] ?>">
