--- a/App/Admin/Resources/Views/installation_form.phtml
+++ b/App/Admin/Resources/Views/installation_form.phtml
@@ -63,5 +63,6 @@ if (!empty($this->vars['options']['flash-message'])) { ?>
         <button class="form-btn-submit" type="submit">Installer</button>
     </fieldset>
 </form>
+<script src="../../../public/bundle.js"></script>
 </body>
 </html>
