--- a/App/Assets/scss/_adminHome.scss
+++ b/App/Assets/scss/_adminHome.scss
@@ -1,6 +1,7 @@
-.admin-header {
+.admin__header {
 
   margin-bottom: 2rem;
+  background-color: $main_background;
 
   .header-content {
     padding: 2rem;
