--- a/App/Front/Resources/Views/block__head_front.phtml
+++ b/App/Front/Resources/Views/block__head_front.phtml
@@ -1,8 +1,11 @@
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="/public/main.css">
     <link rel="icon" href="/public/favicon/favicon.ico">
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/4281e8c561.js" crossorigin="anonymous"></script>
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bungee+Shade&family=Codystar&family=Faster+One&family=Monofett&family=Ruda&family=Sonsie+One&display=swap" rel="stylesheet">
 </head>
