--- a/App/Admin/Resources/Views/block__admin_head.phtml
+++ b/App/Admin/Resources/Views/block__admin_head.phtml
@@ -1,9 +1,12 @@
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0">
     <title><?= ucfirst($datas['header']['site_sub_title']['content']) .
             ' ' . $datas['site_title']['content'] ?></title>
     <link rel="stylesheet" href="/public/main.css">
     <link rel="icon" href="/public/favicon/favicon.ico">
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/4281e8c561.js" crossorigin="anonymous"></script>
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Codystar&family=Faster+One&family=Monofett&family=Sonsie+One&display=swap" rel="stylesheet">
 </head>
