--- a/App/Admin/Resources/Views/new_techno_form.phtml
+++ b/App/Admin/Resources/Views/new_techno_form.phtml
@@ -27,5 +27,6 @@
 
                 </section>
             </main>
+            <script src="../../../public/bundle.js"></script>
     </body>
 </html>
