--- a/App/web/public/main.css
+++ b/App/web/public/main.css
@@ -1,5 +1,16 @@
 /* COLORS */
+/*  #FEFDFF   #F0F8FF #D1FAFF */
 /* IMPORTS */
+/*
+font-family: 'Bungee Shade', cursive;
+font-family: 'Codystar', cursive;
+font-family: 'Faster One', cursive;
+font-family: 'Monofett', cursive;
+font-family: 'Sonsie One', cursive;
+font-family: 'Bangers', cursive;
+font-family: 'Ruda', sans-serif;
+
+ */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -341,18 +352,19 @@ template {
   opacity: 0.4;
   background-color: pink; }
 
-.admin-header {
-  margin-bottom: 2rem; }
-  .admin-header .header-content {
+.admin__header {
+  margin-bottom: 2rem;
+  background-color: #2c3e5a; }
+  .admin__header .header-content {
     padding: 2rem; }
-    .admin-header .header-content .header-welcome {
+    .admin__header .header-content .header-welcome {
       width: 100%;
       text-align: center; }
-      .admin-header .header-content .header-welcome h1 {
+      .admin__header .header-content .header-welcome h1 {
         display: block;
         text-align: center;
         color: orange; }
-        .admin-header .header-content .header-welcome h1::before, .admin-header .header-content .header-welcome h1::after {
+        .admin__header .header-content .header-welcome h1::before, .admin__header .header-content .header-welcome h1::after {
           content: "\f7a4";
           text-align: center;
           font-family: FontAwesome;
@@ -360,7 +372,7 @@ template {
           width: 40px;
           height: 20px;
           display: inline-block; }
-      .admin-header .header-content .header-welcome h2 {
+      .admin__header .header-content .header-welcome h2 {
         color: orange; }
 
 .admin-wrapper {
@@ -625,6 +637,217 @@ template {
     transition-duration: 0.3s;
     transition-timing-function: ease; }
 
+.front__header {
+  position: relative;
+  background-image: url(/uploads/img/graf-women1-banner.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 600px;
+  padding-top: 6rem; }
+  .front__header h1 {
+    margin: auto;
+    display: block;
+    text-align: center;
+    font-family: 'Faster One', cursive;
+    font-size: 9rem;
+    color: #2c3e5a;
+    text-shadow: 5px 5px orange; }
+    .front__header h1 .front__header_chunkTitle {
+      display: inline-block; }
+  .front__header h2 {
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    font-family: 'Faster One', cursive;
+    font-size: 9rem;
+    color: #2c3e5a;
+    text-shadow: 5px 5px orange; }
+  .front__header .front__link_BO {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background-color: orange; }
+    .front__header .front__link_BO a {
+      display: block;
+      width: 100%;
+      color: #2c3e5a;
+      text-transform: uppercase;
+      font-size: 2rem;
+      font-family: 'Bungee Shade', cursive;
+      text-align: center; }
+  .front__header nav {
+    position: absolute;
+    bottom: 0;
+    padding: 2rem 10%;
+    width: 100%;
+    background-color: orange;
+    box-shadow: 0px 5px  10px #C1C1C1; }
+    .front__header nav ul {
+      display: flex;
+      align-items: center;
+      align-content: space-around;
+      height: auto; }
+      .front__header nav ul li {
+        text-align: center;
+        flex: 1;
+        box-sizing: border-box; }
+        .front__header nav ul li a {
+          font-size: 2rem;
+          font-family: 'Bungee Shade', cursive;
+          display: block;
+          width: 100%;
+          padding: 1rem 5%;
+          color: #2c3e5a;
+          transition: 0.3s linear;
+          border-bottom: 4px solid orange; }
+          .front__header nav ul li a:hover {
+            border-bottom: 2px solid #2c3e5a; }
+
+@media screen and (max-width: 780px) {
+  .front__header h1 .front__header_chunkTitle {
+    display: block;
+    width: 100%;
+    text-align: center; } }
+
+@media screen and (max-width: 560px) {
+  .front__header {
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(/uploads/img/graf-women2.jpg); }
+    .front__header h1 {
+      font-family: 'Faster One', cursive;
+      font-size: 5rem;
+      color: #2c3e5a;
+      text-shadow: 5px 5px orange;
+      margin-top: 13rem; }
+    .front__header h2 {
+      font-family: 'Faster One', cursive;
+      font-size: 5rem;
+      color: #2c3e5a;
+      text-shadow: 5px 5px orange; }
+    .front__header nav ul {
+      flex-direction: column;
+      align-items: center;
+      align-content: space-around;
+      height: auto; }
+      .front__header nav ul li a {
+        font-size: 2.4rem;
+        font-family: 'Bungee Shade', cursive; } }
+
+.front__main_wrapper {
+  max-width: 1100px;
+  margin: 0 auto;
+  background-color: #F0F8FF; }
+  .front__main_wrapper section {
+    margin-top: 6rem;
+    padding: 2rem 2%;
+    background-color: #FFF;
+    box-shadow: 0 0 10px #A1A1A1; }
+    .front__main_wrapper section h3 {
+      color: #2c3e5a;
+      font-size: 2rem;
+      font-family: 'Bungee Shade', cursive;
+      background-color: orange;
+      padding: 0.5rem 2%;
+      border-radius: 5px;
+      width: 200px;
+      text-align: center; }
+  .front__main_wrapper .front__a_propos_wrapper {
+    align-content: space-between; }
+    .front__main_wrapper .front__a_propos_wrapper .front__block_a_propos_content {
+      font-size: 1.6rem;
+      font-family: 'Ruda', sans-serif; }
+      .front__main_wrapper .front__a_propos_wrapper .front__block_a_propos_content img {
+        border-radius: 100%;
+        float: right;
+        width: 30%; }
+  .front__main_wrapper .front__parcours_wrapper {
+    flex-direction: column; }
+    .front__main_wrapper .front__parcours_wrapper h3 {
+      flex-basis: 100%; }
+    .front__main_wrapper .front__parcours_wrapper ul {
+      display: block;
+      width: 100%; }
+      .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item {
+        margin: 2rem 0;
+        padding: 1rem 2%;
+        border: solid 2px #2c3e5a; }
+        .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__main_logo {
+          justify-content: center;
+          align-items: center;
+          width: 200px;
+          height: auto; }
+        .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__row {
+          width: calc(100% - 200px);
+          padding: 1rem 2%; }
+          .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__row .parcours__informations {
+            justify-content: space-between; }
+            .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__row .parcours__informations .front__block_label h4, .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__row .parcours__informations .front__block_label h5 {
+              font-size: 2rem;
+              font-family: 'Bungee Shade', cursive;
+              color: #2c3e5a; }
+            .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__row .parcours__informations .front__block_date p {
+              font-size: 1.6rem;
+              font-family: 'Ruda', sans-serif;
+              font-style: italic; }
+          .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__row .parcours__description p {
+            font-size: 1.6rem;
+            font-family: 'Ruda', sans-serif; }
+          .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__row .parcours__skills {
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center; }
+            .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__row .parcours__skills li {
+              margin: 0 2%;
+              width: 100px;
+              height: auto; }
+
+@media screen and (max-width: 780px) {
+  .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__main_logo {
+    min-width: 30%; }
+  .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__row {
+    width: calc(100% - 150px); } }
+
+@media screen and (max-width: 560px) {
+  .front__main_wrapper section h3 {
+    display: block;
+    width: 100%; }
+  .front__main_wrapper .front__parcours_wrapper h3 {
+    display: block;
+    width: 100%; }
+  .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item {
+    flex-direction: column; }
+    .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__main_logo {
+      display: block;
+      width: 50%;
+      margin: 0 auto; }
+      .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__main_logo img {
+        width: 100%; }
+    .front__main_wrapper .front__parcours_wrapper ul .front__parcours_item .parcours__row {
+      margin: 0 auto;
+      display: block;
+      width: 100%; } }
+
+.front__footer {
+  background-color: #2c3e5a;
+  margin-top: 4rem;
+  border-top: orange 3px solid;
+  padding: 2rem 5% 0.5rem; }
+  .front__footer ul {
+    width: 30%;
+    margin: 0 auto;
+    justify-content: space-between; }
+  .front__footer p {
+    text-align: center;
+    color: orange; }
+
+@media screen and (max-width: 560px) {
+  .front__footer ul {
+    width: 100%; } }
+
 /* GENERAL */
 html {
   font-size: 62.5%; }
@@ -634,8 +857,10 @@ body {
   padding: 0;
   font-size: 1.6rem;
   line-height: 1.6;
-  font-family: 'Open Sans', sans-serif;
-  background-color: #2c3e5a; }
+  font-family: 'Open Sans', sans-serif; }
+
+.front__main_content {
+  background-color: #F0F8FF; }
 
 a, a:hover, a:visited, a:active {
   text-decoration: none; }
