--- a/App/Assets/scss/_mixins.scss
+++ b/App/Assets/scss/_mixins.scss
@@ -39,3 +39,20 @@
     display: inline-block;
   }
 }
+
+@mixin btn (){
+  display: block;
+  padding: 1rem 2%;
+  background-color: $text_primary;
+  color: white;
+  min-width: 150px;
+  text-align: center;
+  border: solid 2px $text_primary;
+  transition: 0.4s ease;
+  border-radius: 5px;
+  &:hover{
+    background-color: white;
+    color: $text_primary;
+
+  }
+}
