--- a/App/web/public/main.css
+++ b/App/web/public/main.css
@@ -847,6 +847,207 @@ template {
   .front__footer ul {
     width: 100%; } }
 
+.front__main_wrapper .front__label {
+  font-style: italic;
+  color: #A1A1A1; }
+
+.front__main_wrapper .front__profile_informations {
+  justify-content: space-around; }
+  .front__main_wrapper .front__profile_informations .front__picture_block {
+    width: 40%; }
+    .front__main_wrapper .front__profile_informations .front__picture_block img {
+      box-shadow: 0 0 10px #A1A1A1;
+      border-radius: 10px;
+      border: solid 5px orange; }
+    .front__main_wrapper .front__profile_informations .front__picture_block h1 {
+      text-align: center; }
+  .front__main_wrapper .front__profile_informations .front__informations {
+    width: 40%;
+    flex-direction: column;
+    justify-content: center; }
+    .front__main_wrapper .front__profile_informations .front__informations .fa-map-marker-alt {
+      margin-right: 0.5rem;
+      color: orange; }
+    .front__main_wrapper .front__profile_informations .front__informations a {
+      display: block;
+      margin: 5rem auto;
+      display: block;
+      padding: 1rem 2%;
+      background-color: orange;
+      color: white;
+      min-width: 150px;
+      text-align: center;
+      border: solid 2px orange;
+      transition: 0.4s ease;
+      border-radius: 5px;
+      width: 200px; }
+      .front__main_wrapper .front__profile_informations .front__informations a:hover {
+        background-color: white;
+        color: orange; }
+
+.front__main_wrapper .front__portfolio_commit_section {
+  padding-left: 50px;
+  position: relative; }
+  .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block {
+    margin-bottom: 2rem; }
+    .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article {
+      margin-bottom: 5rem; }
+      .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article::before {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 20px;
+        display: block;
+        width: 4px;
+        content: "";
+        z-index: 1;
+        background-color: orange; }
+      .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article .front__portfolio_single_commit {
+        padding: 1rem 2%; }
+        .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article .front__portfolio_single_commit h4 {
+          font-weight: 900;
+          font-size: 2rem;
+          hyphens: auto;
+          max-width: 100%; }
+        .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article .front__portfolio_single_commit .front__label {
+          font-style: italic;
+          color: #A1A1A1; }
+        .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article .front__portfolio_single_commit a {
+          display: block;
+          margin: 0 auto;
+          display: block;
+          padding: 1rem 2%;
+          background-color: orange;
+          color: white;
+          min-width: 150px;
+          text-align: center;
+          border: solid 2px orange;
+          transition: 0.4s ease;
+          border-radius: 5px;
+          width: 200px; }
+          .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article .front__portfolio_single_commit a:hover {
+            background-color: white;
+            color: orange; }
+        .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article .front__portfolio_single_commit .front__single_commit-msg-list .fa-check-square {
+          margin-right: 0.5rem;
+          color: orange; }
+      .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article .commitMerge {
+        background-color: aliceblue;
+        color: #A1A1A1; }
+      .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article .front__portfolio_commit_date {
+        position: relative;
+        margin-left: -44px;
+        margin-bottom: 1rem;
+        background: linear-gradient(to right, #2c3e5a 5%, white);
+        color: orange;
+        padding: 0.4rem 0.5%;
+        border-radius: 10px;
+        overflow: hidden;
+        z-index: 100;
+        font-family: 'Ruda', sans-serif; }
+        .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article .front__portfolio_commit_date p {
+          display: inline-block;
+          margin: 0;
+          position: absolute;
+          top: 1.1rem; }
+        .front__main_wrapper .front__portfolio_commit_section .front__portfolio_commit_block article .front__portfolio_commit_date .fa-hard-hat {
+          display: inline-block;
+          padding: 0.3rem 0;
+          margin-right: 15px;
+          color: orange; }
+
+.front__block_pagination .pagination__link_wrapper1, .front__block_pagination .pagination__link_wrapper2 {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 3rem 0 3rem; }
+  .front__block_pagination .pagination__link_wrapper1 .pagination__btn_link, .front__block_pagination .pagination__link_wrapper2 .pagination__btn_link {
+    display: block;
+    padding: 1rem 2%;
+    background-color: orange;
+    color: white;
+    min-width: 150px;
+    text-align: center;
+    border: solid 2px orange;
+    transition: 0.4s ease;
+    border-radius: 5px;
+    display: inline-block;
+    white-space: nowrap; }
+    .front__block_pagination .pagination__link_wrapper1 .pagination__btn_link:hover, .front__block_pagination .pagination__link_wrapper2 .pagination__btn_link:hover {
+      background-color: white;
+      color: orange; }
+    .front__block_pagination .pagination__link_wrapper1 .pagination__btn_link:hover, .front__block_pagination .pagination__link_wrapper2 .pagination__btn_link:hover {
+      box-shadow: 5px 5px 5px #bbb;
+      transform: scale(1.05); }
+
+.front__block_pagination .first {
+  text-wrap: avoid; }
+  .front__block_pagination .first::before {
+    font-weight: 900;
+    content: "\f100";
+    margin-right: 1rem;
+    font-family: FontAwesome;
+    width: 10px;
+    height: 20px;
+    display: inline-block; }
+
+.front__block_pagination .prev {
+  text-wrap: avoid; }
+  .front__block_pagination .prev::before {
+    font-weight: 900;
+    content: "\f104";
+    margin-right: 1rem;
+    font-family: FontAwesome;
+    width: 10px;
+    height: 20px;
+    display: inline-block; }
+
+.front__block_pagination .next {
+  text-wrap: avoid; }
+  .front__block_pagination .next::after {
+    font-weight: 900;
+    content: "\f105";
+    margin-left: 1rem;
+    font-family: FontAwesome;
+    width: 10px;
+    height: 20px;
+    display: inline-block; }
+
+.front__block_pagination .last {
+  text-wrap: avoid; }
+  .front__block_pagination .last::after {
+    font-weight: 900;
+    content: "\f101";
+    margin-left: 1rem;
+    font-family: FontAwesome;
+    width: 10px;
+    height: 20px;
+    display: inline-block; }
+
+@media screen and (max-width: 780px) {
+  .front__main_wrapper .front__profile_informations {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center; }
+    .front__main_wrapper .front__profile_informations .front__informations {
+      width: 100%;
+      padding: 0 2%; }
+  .front__block_pagination {
+    margin: 3rem 0 3rem; }
+    .front__block_pagination .portfolio-label {
+      display: inline; }
+    .front__block_pagination .first, .front__block_pagination .prev, .front__block_pagination .next, .front__block_pagination .last {
+      margin: 1rem; }
+    .front__block_pagination .first {
+      order: 3; }
+    .front__block_pagination .prev {
+      order: 1; }
+    .front__block_pagination .next {
+      order: 2; }
+    .front__block_pagination .last {
+      order: 4; } }
+
 /* GENERAL */
 html {
   font-size: 62.5%; }
@@ -856,7 +1057,7 @@ body {
   padding: 0;
   font-size: 1.6rem;
   line-height: 1.6;
-  font-family: 'Open Sans', sans-serif; }
+  font-family: 'Ruda', sans-serif; }
 
 .front__main_content {
   background-color: #F0F8FF; }
