--- a/App/Assets/scss/_frontHeader.scss
+++ b/App/Assets/scss/_frontHeader.scss
@@ -110,7 +110,7 @@
 
     h1{
       @include header_title_font($size:5rem);
-      margin-top: 13rem;
+      //margin-top: 13rem;
     }
 
     h2{
