--- a/App/Assets/scss/main.scss
+++ b/App/Assets/scss/main.scss
@@ -21,6 +21,8 @@ $warning: darkorange;
 @import "_frontHome";
 @import "_frontFooter";
 @import "_frontPortfolio";
+@import "_frontProjectsList";
+@import "_frontSingleProject";
 
 
 /* GENERAL */
