short-url: add mapping table for handle short urls, and add redirection function

--- a/App/Admin/Resources/Views/admin_login.phtml
+++ b/App/Admin/Resources/Views/admin_login.phtml
@@ -17,7 +17,7 @@
             <h1>Admin login</h1>
         </header>
         <main>
-            <form action="/admin/login/checkLogin" method="post">
+            <form action="/login-form" method="post">
                 <div>
                     <label for="login">Login</label>
                     <input id="login" name="login" type="text"/>
