--- a/App/Admin/Resources/Views/block__admin_header.phtml
+++ b/App/Admin/Resources/Views/block__admin_header.phtml
@@ -7,8 +7,8 @@
         </div>
 
         <div class="adminLogout">
-            <a href="/admin/admin/home" title="admin_home"><i class="fas fa-home"></i> Admin home</a>
-            <a href="/admin/login/logout" title="logout"><i class="fas fa-power-off"></i> Deconnexion</a>
+            <a href="/admin/home" title="admin_home"><i class="fas fa-home"></i> Admin home</a>
+            <a href="/logout" title="logout"><i class="fas fa-power-off"></i> Deconnexion</a>
             <a href="/" title="to_front"><i class="fas fa-globe-europe"></i> Aller au sur le Front</a>
         </div>
     </div>
