--- a/App/Admin/Resources/Views/formbuilder.phtml
+++ b/App/Admin/Resources/Views/formbuilder.phtml
@@ -14,7 +14,7 @@
             <p>Bienvenue sur le formbuilder, ici on peut créer les formulaires dont on a besoin pour la création du contenu.</p>
         </article>
         <article>
-            <form class="formbuilder <?= $this->vars['options']['form-selector'] ?? '' ?>" action="/admin/formBuilder/validator" method="post">
+            <form class="formbuilder <?= $this->vars['options']['form-selector'] ?? '' ?>" action="/form/validator" method="post">
 
             </form>
         </article>
