--- a/App/Admin/Resources/Views/handle_content_form.phtml
+++ b/App/Admin/Resources/Views/handle_content_form.phtml
@@ -10,7 +10,7 @@
             <section class="admin-content">
                 <h6>CONTENT FORM</h6>
                 <form class="formbuilder-load getConf-<?= $this->vars['options']['content_name'] ?? '' ?> <?= $this->vars['options']['form-selector'] ?? '' ?>"
-                      action="/admin/content/<?=  $this->vars['options']['action']?>"
+                      action="/content/<?=  $this->vars['options']['action']?>"
                       method="post"
                       enctype="multipart/form-data">
 
