--- a/App/Admin/Resources/Views/installation_form.phtml
+++ b/App/Admin/Resources/Views/installation_form.phtml
@@ -12,7 +12,7 @@ if (!empty($this->vars['options']['flash-message'])) { ?>
 <?php } ?>
 <h1>Installation du projet</h1>
 </header>
-<form class="installation-form" action="/admin/install/startInstall" method="post">
+<form class="installation-form" action="/installation" method="post">
     <fieldset>
         <legend>
             Compte Administrateur
