--- a/App/Admin/Resources/Views/settings_danger_zone.phtml
+++ b/App/Admin/Resources/Views/settings_danger_zone.phtml
@@ -40,7 +40,7 @@
 
                                     <?php } ?>
                                     <td>
-                                        <a href="/admin/settings/delete?id=<?= $value ?>">Supprimer</a>
+                                        <a href="/delete-content?id=<?= $value ?>">Supprimer</a>
                                     </td>
                                 </tr>
                             <?php }
