--- a/App/Admin/Resources/Views/block__admin_menu.phtml
+++ b/App/Admin/Resources/Views/block__admin_menu.phtml
@@ -1,7 +1,7 @@
 <aside class="admin-sidebar">
     <div>
         <h3>Menu</h3>
-        <a class="admin_menu__add_new_content" href="/admin/formBuilder/index"><i class="fas fa-plus-square"></i> Ajouter un nouveau types de contenu</a>
+        <a class="admin_menu__add_new_content" href="/new-content-type"><i class="fas fa-plus-square"></i> Ajouter un nouveau types de contenu</a>
         <ul class="admin_menu__dynamic_content_label">
             <?php
             foreach ($this->vars['options']['navigation'] as $key => $item) {
@@ -13,13 +13,13 @@
                 foreach ($item as $key => $value) { ?>
                 <?php if ($value['contentTechnicalName'] !== 'danger_zone') { ?>
                     <li>
-                        <a href="/admin/content/index?content_name=<?= $value['contentTechnicalName'] ?>&id=<?= $value['id'] ?>">
+                        <a href="/content/index?content_name=<?= $value['contentTechnicalName'] ?>&id=<?= $value['id'] ?>">
                             <?= ucfirst($value['contentDisplayName']) ?>
                         </a>
                     </li>
                     <?php } else { ?>
                     <li>
-                        <a href="/admin/settings/<?= $value['controller'] ?>">
+                        <a href="/settings/<?= $value['controller'] ?>">
                             <?= ucfirst($value['contentDisplayName']) ?>
                         </a>
                     </li>
