move-configuration-files: move configuration file outside Formbuilder service, to App root, and fux bugs

--- a/App/Admin/Resources/Views/handle_content_index.phtml
+++ b/App/Admin/Resources/Views/handle_content_index.phtml
@@ -80,7 +80,7 @@
                         <p>Pas de liste d'élément pour le moment...</p>
 
                 <?php } ?>
-                        <a href="/content/form?content_name=<?= $this->vars['options']['labels']['technicalName']?>&id=<?= $this->vars['options']['id']?>">Créer un <?= $this->vars['options']['name'] ?? 'contenu' ?></a>
+                        <a href="/content/form?content_name=<?= $this->vars['options']['labels']['technicalName']?>">Créer un <?= $this->vars['options']['name'] ?? 'contenu' ?></a>
                     </div>
             </section>
 
