build-404-page: add some style to 404 page

--- a/App/Assets/scss/main.scss
+++ b/App/Assets/scss/main.scss
@@ -23,6 +23,7 @@ $warning: darkorange;
 @import "_frontPortfolio";
 @import "_frontProjectsList";
 @import "_frontSingleProject";
+@import "_404";
 
 
 /* GENERAL */
