--- a/App/Front/Resources/Views/404.phtml
+++ b/App/Front/Resources/Views/404.phtml
@@ -1,3 +1,27 @@
-<h1 style="color:#900; font-size: 24em">404</h1>
-<p>Cette page n'existe pas...</p>
-<a href="/front/index/index">Retour à l'accueil</a>
+<!DOCTYPE html>
+<html lang="fr">
+<?php
+// Shortcut
+
+$datas = $this->vars['options'];
+include("block__head_front.phtml");
+
+if (!empty($datas) && isset($datas['main']['section_1']['data'][0])) {
+
+    $content = $datas['main']['section_1']['data'][0];
+?>
+<body class="front__main_content">
+<?php //include("block__header_front.phtml"); ?>
+<main class="front__main_wrapper">
+
+    <h1><?= $content['title'] ?></h1>
+    <p><?= html_entity_decode($content['message'], ENT_HTML5) ?></p>
+    <a href="/front/index/index">Retour à l'accueil</a>
+</main>
+
+<?php } else { ?>
+    <h1>Merci de suivre la procédure d'installation avant d'aller plus loin....</h1>
+<?php } ?>
+<script src="../../../public/bundle.js"></script>
+</body>
+</html>
