--- a/App/web/public/main.css
+++ b/App/web/public/main.css
@@ -1364,6 +1364,54 @@ template {
   .front__single_project article .project__content_tag .project__tag {
     margin: 1rem 1%; } }
 
+.front__main_content .front__main_wrapper {
+  max-width: 100%;
+  width: 100%; }
+  .front__main_content .front__main_wrapper h1 {
+    display: block;
+    color: orange;
+    text-align: center;
+    font-size: 20em;
+    margin: 0; }
+  .front__main_content .front__main_wrapper p {
+    text-align: center; }
+  .front__main_content .front__main_wrapper a {
+    display: block;
+    margin: 5rem auto;
+    display: block;
+    padding: 1rem 2%;
+    background-color: orange;
+    color: white;
+    min-width: 150px;
+    text-align: center;
+    border: solid 2px orange;
+    transition: 0.4s ease;
+    border-radius: 5px;
+    width: 300px; }
+    .front__main_content .front__main_wrapper a:hover {
+      background-color: white;
+      color: orange; }
+
+@media screen and (max-width: 560px) {
+  .front__main_content .front__main_wrapper h1 {
+    font-size: 10em; }
+  .front__main_content .front__main_wrapper a {
+    display: block;
+    margin: 5rem auto;
+    display: block;
+    padding: 1rem 2%;
+    background-color: orange;
+    color: white;
+    min-width: 150px;
+    text-align: center;
+    border: solid 2px orange;
+    transition: 0.4s ease;
+    border-radius: 5px;
+    max-width: 200px; }
+    .front__main_content .front__main_wrapper a:hover {
+      background-color: white;
+      color: orange; } }
+
 /* GENERAL */
 html {
   font-size: 62.5%; }
