add-CV: fix bug on wrapper width, fix bug for PDF files

--- a/App/Assets/scss/_404.scss
+++ b/App/Assets/scss/_404.scss
@@ -1,6 +1,6 @@
 .front__main_content {
 
-  .front__main_wrapper {
+  .front__error_page_wrapper {
     max-width: 100%;
     width: 100%;
     h1 {
