--- a/App/Front/Resources/Views/block__pagination_github.phtml
+++ b/App/Front/Resources/Views/block__pagination_github.phtml
@@ -4,7 +4,7 @@
 
         foreach ($datas['main']['pagination'] as $array ) { ?>
 
-            <a class="pagination__btn_link <?= $array['class'] ?>" href="/front/index/portfolio?<?= $array['path'] ?>"><span class="portfolio-label"><?= ucfirst($array['label']) ?></span></a>
+            <a class="pagination__btn_link <?= $array['class'] ?>" href="/portfolio?<?= $array['path'] ?>"><span class="portfolio-label"><?= ucfirst($array['label']) ?></span></a>
 
         <?php
         } ?>
