--- a/App/Assets/scss/_adminHome.scss
+++ b/App/Assets/scss/_adminHome.scss
@@ -32,6 +32,48 @@
 
   .admin-content {
     width: 80%;
+    flex-wrap: wrap;
+
+    .widget-admin {
+      display: inline-block;
+      min-width: 300px;
+      background-color: white;
+      margin: 1rem 2%;
+      padding: 1rem 1%;
+      min-height: 300px;
+
+      .tokenValid {
+        color: $success;
+      }
+
+      .tokenNotValid {
+        color: $error;
+      }
+
+      .tokenNotValid, .tokenValid, .admin__home_commit_count {
+        text-align: center;
+        font-size: 8rem;
+
+      }
+
+      h3 {
+        text-align: center;
+        color: $text_primary;
+      }
+
+      li {
+        padding-left: 5%;
+        line-height: 2;
+        &::before {
+          display: inline-block;
+          font-family: FontAwesome;
+          content: '\f0da';
+          width: 15px;
+          height: 15px;
+        }
+      }
+    }
+
   }
 
   h2 {
@@ -39,13 +81,7 @@
     width: 100%;
   }
 
-  .widget-admin {
-    display: inline-block;
-    min-width: 300px;
-    background-color: white;
-    margin: 1rem 2%;
-    padding: 1rem 1%;
-  }
+
 }
 
 
